--- a/Gibbs.ipynb
+++ b/Gibbs.ipynb
@@ -28,7 +28,7 @@
     "$$ P(y_i, z | ti, \\theta, p) = \\theta + (1-\\theta)(1-p)^{t_i} \\quad \\text{si} \\ y_i = 0$$ \n",
     "$$ P(y_i, z | ti, \\theta, p) = (1-\\theta) \\frac{t_i!}{y_i! (t_i-y_i)!} p^{y_i} (1-p)^{t_i-y_i} \\quad \\text{si} \\ y_i \\ne 0 $$\n",
     "\n",
-    "Pour pouvoir échantilloner dans tout $\\R$ selon les lois a posteriori de $\\theta$ et $p$, on définit une relation logit avec le paramètre $\\delta$ et $\\alpha$\n",
+    "Pour pouvoir échantilloner dans tout $\\mathbb{R}$ selon les lois a posteriori de $\\theta$ et $p$, on définit une relation logit avec le paramètre $\\delta$ et $\\alpha$\n",
     "$$ logit(\\theta) = \\delta \\quad \\text{et} \\quad  logit(p) = \\alpha $$\n"
    ]
   },
