Gibbs final corrigé

--- a/Gibbs_final.ipynb
+++ b/Gibbs_final.ipynb
@@ -19,10 +19,10 @@
    "metadata": {},
    "source": [
     "# Hearts : a mixture model for count data  \n",
-    "On etude l'effet des médicaments administrés à des patients atteints d'anomalie au niveau du coeur. Ces patients ont des contractions prématurées du ventricule droit du coeur (PVC's) et le but c'est qu'après prise des médicaments, on ne décompte plus de PVC's.  \n",
+    "On etudie l'effet des médicaments administrés à des patients atteints d'anomalie au niveau du coeur. Ces patients ont des contractions prématurées du ventricule droit du coeur (PVC's) et le but c'est qu'après prise des médicaments, on ne décompte plus de PVC's.  \n",
     "\n",
-    "On definit $t_i$ la variable qui décompte le nombre de PVC's pour le patient $i$ dans le temps et $Yi$ la variable qui décompte le nombre de PVC's après prise des médicaments pour le patient $i$. Toutes deux suivent une loi de Poisson et le conditionnement $Y_i|t_i$ defini une $\\mathcal{B}in(p, t_i)$.  \n",
-    "Cependant, décompter aucun PVC's ne signifie pas forcement que le patients guéri, on introduit dont une variable $Z \\sim \\mathcal{B}(\\theta)$ supplémentaire qui indique si le patient est guéri avec une probabilité $\\theta$. \n",
+    "On definit $t_i$ la variable qui décompte le nombre de PVC's pour le patient $i$ dans le temps et $Yi$ la variable qui décompte le nombre de PVC's après prise des médicaments pour le patient $i$. Toutes deux suivent une loi de Poisson et le conditionnement $Y_i|t_i$ definit une $\\mathcal{B}in(p, t_i)$.  \n",
+    "Cependant, décompter aucun PVC's ne signifie pas forcément que le patient guérit, on introduit donc une variable $Z \\sim \\mathcal{B}(\\theta)$ supplémentaire qui indique si le patient est guéri avec une probabilité $\\theta$. \n",
     "\n",
     "On obtient donc le modèle de mélange suivant :\n",
     "$$ P(y_i, z | ti, \\theta, p) = \\theta + (1-\\theta)(1-p)^{t_i} \\quad \\text{si} \\ y_i = 0$$ \n",
@@ -64,10 +64,10 @@
     "#PVC total\n",
     "PVC_tot = np.array([11, 11, 17, 22, 9, 6, 5, 14, 9, 7, 22, 51])\n",
     "\n",
-    "#avant médicaments  \n",
+    "#avant médicament\n",
     "before_drugs = np.array([6, 9, 17, 22, 7, 5, 5, 14, 9, 7, 9, 51])\n",
     "\n",
-    "#après médicaments \n",
+    "#après médicament\n",
     "after_drugs = np.array([5, 2, 0, 0, 2, 1, 0, 0, 0, 0, 13, 0])\n",
     "\n",
     "hearts = np.vstack((PVC_tot, before_drugs, after_drugs))\n",
@@ -154,8 +154,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Simualtions par algorithme de MCMC avec echantillonneur de Gibbs\n",
-    "On simule 3 chaines avec 3 initialisationde $\\alpha, \\delta$ différentes (on utilise la distribution normal de variance 25)"
+    "## Simulations par algorithme de MCMC avec échantillonneur de Gibbs\n",
+    "On simule 3 chaînes avec 3 initialisations de $\\alpha, \\delta$ différentes (on utilise la distribution normale de variance 25)"
    ]
   },
   {
@@ -249,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Les chaines se superposent et l'autocorrélation pour les deux paramètres sont très faibles. On a donc des chaines qui mélangent bien et par conséquent qui explorent l'espace de définition des densités à posteriori mais aussi des chaines très peu corrélés. "
+    "Les chaînes se superposent et l'autocorrélation pour les deux paramètres sont très faibles. On a donc des chaînes qui mélangent bien et par conséquent qui explorent l'espace de définition des densités à posteriori mais aussi des chaînes très peu corrélées. "
    ]
   },
   {
@@ -258,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Calcul des distribution pour les paramètres p et theta \n",
+    "#Calcul des distributions pour les paramètres p et theta \n",
     "theta = (1+np.exp(-simu[:, 1]))**(-1)\n",
     "p = (1+np.exp(-simu[:, 0]))**(-1)"
    ]
@@ -369,7 +369,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En moyenne, on a une probabilité de $p = 0.38$ d'avoir un PVC et une probabilité $\\theta = 0.57$ d'être guéri, cette dernière étant supérieur à 0.5 pourrait indiquer un effet du médicament.   \n",
+    "En moyenne, on a une probabilité $p = 0.38$ d'avoir un PVC et une probabilité $\\theta = 0.57$ d'être guéri, cette dernière étant supérieure à 0.5 cela pourrait indiquer un effet du médicament.   \n",
     "\n",
     "Pour percevoir un peu plus l'effet du médicament, on peut aussi etudier le paramètre $\\beta$, paramètre qui traduit le changement dans la distribution du comptage des PVC après médicament. "
    ]
@@ -402,9 +402,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "L'estimation de $\\beta$ etant inferieure à 1, on peut remarquer que les médicaments reduisent le nombre de PVC chez les malades, cependant cette valeur est plus proche de 1 que de 0 donc il n'y a pas de changement drastiques après administration du médicaments.\n",
+    "L'estimation de $\\beta$ étant inférieure à 1, on peut remarquer que les médicaments réduisent le nombre de PVC chez les malades, cependant cette valeur est plus proche de 1 que de 0 donc il n'y a pas de changement drastique après administration du médicament.\n",
     "\n",
-    "Si on trace la distribution de ce paramètre à posteriori, on remarque qui'il prend prendre des valeurs superieur à 1 avec des probabilités non négligeables, dans ce cas, il y a une augmentation du nombre de PVC chez le patients. Ceci peut-être traduit simplement par le fait que le médicament n'a eu aucun effet sur le patient. "
+    "Si on trace la distribution de ce paramètre a posteriori, on remarque qui'il peut prendre des valeurs supérieures à 1 avec des probabilités non négligeables, dans ce cas il y a une augmentation du nombre de PVC chez le patient. Ceci peut-être traduit simplement par le fait que le médicament n'a eu aucun effet sur le patient. "
    ]
   },
   {
